# bitstamp-rs

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CODE_STYLE.md  Cargo.toml  LICENSE  PLAN.md  README.md  openapi.json
examples/: account.rs  hello-world.rs  market_data.rs  ticker.rs  trading.rs  websocket.rs
src/: client.rs  error.rs  lib.rs  tests.rs  types.rs  ws.rs
src/api/: account.rs  deposits.rs  derivatives.rs  earn.rs  fees.rs  instant_convert.rs  market_info.rs  mod.rs  order_book.rs  orders.rs  security.rs  sub_account.rs  tickers.rs  transactions.rs  travel_rule.rs  websocket.rs  withdrawals.rs
src/types/: deposits.rs  derivatives.rs  earn.rs  errors.rs  fees.rs  instant_convert.rs  mod.rs  orders.rs  rest.rs  security.rs  sub_account.rs  transactions.rs  travel_rule.rs  websocket_token.rs  withdrawals.rs  ws.rs
