[package]
name = "bitstamp"
version = "0.1.0"
authors = ["Milan Stastny <milan@stastnej.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["client", "http1"] }
hyper-tls = "0.5"
log = "0.4"
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0"
hmac = "0.11.0"
hex = "0.4"
chrono = "0.4"
uuid = { version = "0.8", features = ["v4"] }
sha2 = "0.9"
tokio = { version = "1.10", features = ["time", "fs", "macros", "io-util"] }
tokio-tls = "0.3"
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.15" }
tungstenite = "0.15"

[dev-dependencies]
env_logger = "0.9"
tokio = { version = "1.10", features = ["rt-multi-thread"] }