[package]
name = "bitstamp"
version = "0.1.0"
authors = ["Milan Stastny <milan@stastnej.ch>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyper-rustls = { version = "0.27", features = ["native-tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
hex = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
tokio = { version = "1", features = ["time", "fs", "macros", "io-util"] }
futures = "0.3"
futures-util = "0.3"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

[dev-dependencies]
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread"] }
